fixes issue 2547: UI Safari bug - vertically centers navbar link text on Safari

--- a/imports/plugins/included/default-theme/client/styles/tagNav.less
+++ b/imports/plugins/included/default-theme/client/styles/tagNav.less
@@ -294,7 +294,7 @@
 }
 
 .rui.tagnav .navbar-item {
-  height: 100%;
+  height: @navbar-height;
 }
 
 .rui.tagnav.vertical .navbar-item {
